# mqtt-c

./: .gitignore  CMakeLists.txt  Makefile  readme.txt
sample/: pub.c  sub.c
